# uav_contest

./: AUTHORS  CMakeLists.txt  README.md
contest/: CMakeLists.txt
contest/artag_parser/: artag_parser_main.cpp
id-markers/: README
include/ARToolKitPlus/: ARToolKitPlus.h  Camera.h  Tracker.h  TrackerMultiMarker.h  TrackerSingleMarker.h  ar.h  arBitFieldPattern.h  arGetInitRot2Sub.h  arMulti.h  matrix.h  vector.h
include/ARToolKitPlus/extra/: BCH.h  Hull.h  rpp.h
sample/data/: Logitech_Notebook_Pro.cal  PGR_M12x0.5_2.5mm.cal  no_distortion.cal
sample/multi/: main.cpp
sample/simple/: main.cpp
src/: Camera.cpp  Tracker.cpp  TrackerMultiMarker.cpp  TrackerSingleMarker.cpp
src/core/: arBitFieldPattern.cpp  arDetectMarker.cpp  arDetectMarker2.cpp  arGetCode.cpp  arGetInitRot2.cpp  arGetMarkerInfo.cpp  arGetTransMat.cpp  arGetTransMat2.cpp  arGetTransMat3.cpp  arGetTransMatCont.cpp  arLabeling.cpp  arLabelingImpl.h  arMultiActivate.cpp  arMultiGetTransMat.cpp  arMultiGetTransMatHull.cpp  arMultiReadConfigFile.cpp  arUtil.cpp  mPCA.cpp  matrix.cpp  paramDecomp.cpp  paramDistortion.cpp  rppGetTransMat.cpp  rppMultiGetTransMat.cpp  vector.cpp
src/extra/: BCH.cpp  Hull.cpp
src/librpp/: arGetInitRot2Sub.cpp  librpp.cpp  librpp.h  rpp.cpp  rpp.h  rpp_const.h  rpp_svd.cpp  rpp_types.h  rpp_vecmat.cpp  rpp_vecmat.h
tools/IdPatGen/: main.cpp
tools/IdPatGen/PN/: Image.cpp  Image.h  ImageTool.cpp  ImageTool.h  PocketKnife.h  README
tools/MirrorPatt/: main.cpp
tools/patt2ppm/: main.cpp
tools/ppm2patt/: main.cpp
tools/test/: main.cpp
